syntax = "proto3";

package user;

service UserService {
    rpc CreateUser(CreateUserRequest) return (CreateUserResponse);
    rpc GetUser (GetUserRequest) return (GetUserResponse);
}

message User {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string created_at = 4;
}

// 사용자 생성
message CreateUserRequest {
  string email = 1;
  string name = 2;
}
message CreateUserResponse {
  User user = 1;
}

// 사용자 정보 조회
message GetUserRequest{
    string user_id = 1;
}
message GetUserResponse {
    User user = 1;
}